Update README, SEO, Analytics and Open Graph metadata

--- a/index.html
+++ b/index.html
@@ -4,6 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pınar Topuz | Full-Stack Developer</title>
+    <meta name="description" content="4+ yıllık deneyime sahip Full-Stack Developer. ASP.NET Core, C#, React, Clean Architecture ve REST API geliştirme uzmanı." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pinartechstudio.com/" />
+    <meta property="og:title" content="Pınar Topuz – Full-Stack Developer" />
+    <meta property="og:description" content="Modern web uygulamaları geliştiren Full-Stack Developer. ASP.NET Core, React ve Clean Architecture uzmanlığı." />
+    <meta property="og:image" content="https://pinartechstudio.com/og-pinartechstudio.png" />
+    <meta property="og:site_name" content="PinarTechStudio" />
+    <meta property="og:locale" content="tr_TR" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://pinartechstudio.com/" />
+    <meta property="twitter:title" content="Pınar Topuz – Full-Stack Developer" />
+    <meta property="twitter:description" content="Modern web uygulamaları geliştiren Full-Stack Developer." />
+    <meta property="twitter:image" content="https://pinartechstudio.com/og-pinartechstudio.png" />
+
+    <!-- Google Analytics (GA4) -->
+    <!-- Replace G-XXXXXXXXXX with your actual Measurement ID -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
